--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
     .row.row-cols-1.row-cols-md-3.g-4
       each card in cards
         .col
-          .card.h-100
+          .card
             img.card-img-top(src=card.image, alt=card.title)
             .card-body
               h5.card-title= card.title
