--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,8 @@ html
                 li.nav-item
                   a.nav-link(href='/account') Account
                 li.nav-item
+                  a.nav-link(href='/jobs') Jobs
+                li.nav-item
                   a.nav-link(href='/signout') Sign Out 
               else
                 li.nav-item
