Test for download files

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,6 +22,8 @@ html
                 li.nav-item
                   a.nav-link(href='/jobs') Jobs
                 li.nav-item
+                  a.nav-link(href='/candidateDocuments') Candidate Documents
+                li.nav-item
                   a.nav-link(href='/signout') Sign Out 
               else
                 li.nav-item
