--- a/views/candidateDocuments.pug
+++ b/views/candidateDocuments.pug
@@ -23,8 +23,8 @@ block content
                 input(type='file' name='Curriculum' accept='.pdf')
                 
             .d-inline-flex.gap-3
-                button.btn.btn-primary(type='submit') Delete
-                button.btn.btn-primary(type='submit') Update
+                button.btn.btn-primary(type='submit' name="action" value='Delete') Delete
+                button.btn.btn-primary(type='submit' name="action" value='Update') Update
 
     if candidateDocuments
         table.table
